# SmartDesk-AI

./: .gitignore  .gitleaksignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  security.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_init.py  0002_embedding_1024.py  0003_widget_key.py  0004_org_webhooks.py  0005_enable_rls.py
backend/app/: main.py  worker.py
backend/app/api/: analytics.py  auth.py  chat.py  health.py  knowledge.py  settings.py  webhooks.py  widget.py
backend/app/core/: clerk.py  clerk_api.py  config.py  db.py  deps.py  realtime.py  security.py
backend/app/models/: __init__.py  _base.py  _types.py  conversation.py  knowledge.py  organization.py  widget.py
backend/app/rag/: pipeline.py
backend/app/services/: chunking.py  embeddings.py  ingestion.py  parsing.py  storage.py  webhooks.py
backend/tests/: conftest.py  test_analytics.py  test_auth.py  test_handoff.py  test_health.py  test_ingestion.py  test_rag_integration.py  test_realtime.py  test_security.py  test_webhooks.py  test_widget.py
docs/: ARCHITECTURE.md  DEPLOYMENT.md  ROADMAP.md  SECURITY.md  WEEK4_PLAN.md
frontend/: .env.example  eslint.config.mjs  middleware.ts  next.config.js  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/app/: globals.css  icon.tsx  layout.tsx  opengraph-image.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/dashboard/chat/: page.tsx
frontend/app/dashboard/conversations/: page.tsx
frontend/app/dashboard/knowledge/: page.tsx
frontend/app/dashboard/settings/: page.tsx
frontend/app/dashboard/widget/: page.tsx
frontend/app/sign-in/[[...sign-in]]/: page.tsx
frontend/app/sign-up/[[...sign-up]]/: page.tsx
frontend/components/: account-info.tsx  dashboard-nav.tsx  toggles.tsx  widget-embed.tsx
frontend/lib/: api.ts  i18n.tsx  theme.tsx  use-api.ts  widget.ts
frontend/public/: smartdesk.js
widget/: package-lock.json  package.json  rollup.config.js  tsconfig.json
widget/src/: index.ts
