[project]
name = "smartdesk-backend"
version = "0.1.0"
description = "SmartDesk AI — RAG-powered customer support backend"
requires-python = ">=3.11"
dependencies = [
    # Core framework
    "fastapi[standard]>=0.136.1",
    "uvicorn[standard]>=0.35.0",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.7.1",

    # Database
    "sqlalchemy>=2.0.49",
    "alembic>=1.14.1",
    "psycopg[binary]>=3.2.9",
    "pgvector>=0.4.1",

    # Cache / queue
    "redis>=5.2.1",
    "celery>=5.5.0",

    # AI
    "anthropic>=0.104.1",
    "openai>=1.93.0",
    "tiktoken>=0.9.0",

    # HTTP & files
    "httpx>=0.28.1",
    "python-multipart>=0.0.20",   # CVE-2024-53981 fixed in 0.0.18+
    "pypdf>=5.4.0",
    "python-docx>=1.1.2",
    "beautifulsoup4>=4.13.3",

    # Auth (Clerk JWT verification)
    "PyJWT[crypto]>=2.10.1",
    "cryptography>=44.0.0",       # latest security patches

    # Security / hardening
    "slowapi>=0.1.9",             # rate limiting
    "secweb>=1.18.1",             # security headers middleware
    "bleach>=6.2.0",              # HTML/XSS sanitization

    # Observability
    "sentry-sdk[fastapi]>=2.20.0",
    "structlog>=25.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.4",
    "mypy>=1.14.1",
    "bandit>=1.8.2",              # security linter
    "pip-audit>=2.7.3",           # dependency vulnerability scanner
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "S"]  # S = bandit-style security rules
ignore = ["S101"]                              # allow assert in tests

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
