[project]
name = "smartdesk-backend"
version = "0.1.0"
description = "SmartDesk AI — RAG-powered customer support backend"
requires-python = ">=3.11"
# Conservative minimums — proven to install together. Dependabot bumps these over time
# under a "we manually review every PR" policy.
dependencies = [
    # Core framework
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",

    # Database
    "sqlalchemy>=2.0.35",
    "alembic>=1.13.3",
    "psycopg[binary]>=3.2.3",
    "pgvector>=0.3.6",

    # Cache / queue
    "redis>=5.1.0",
    "celery>=5.4.0",

    # AI
    "anthropic>=0.40.0",
    "openai>=1.55.0",
    "tiktoken>=0.8.0",

    # HTTP & files
    "httpx>=0.27.2",
    "python-multipart>=0.0.18",   # >=0.0.18 fixes CVE-2024-53981
    "pypdf>=5.1.0",
    "python-docx>=1.1.2",
    "beautifulsoup4>=4.12.3",

    # Auth (Clerk JWT verification + webhook signature checks)
    "PyJWT[crypto]>=2.9.0",
    "cryptography>=43.0.0",
    "svix>=1.40.0",

    # Security / hardening
    "slowapi>=0.1.9",             # rate limiting (custom security headers via Starlette middleware in app/main.py)

    # Observability
    "sentry-sdk[fastapi]>=2.18.0",
    "structlog>=24.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.7.4",
    "mypy>=1.13.0",
    "bandit>=1.7.10",
    "pip-audit>=2.7.3",
]

[tool.setuptools]
packages = ["app"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501", "N806"]
# FastAPI's idiomatic dependency injection uses Depends(...)/File(...) in argument
# defaults — that is exactly the pattern. B008 is a known false positive here.
"app/api/*" = ["B008"]
"app/core/deps.py" = ["B008"]
# Alembic is mostly auto-generated boilerplate; not worth normalizing every revision.
"alembic/*" = ["I001", "UP007", "UP035"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
